--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,8 @@ gradle-app.setting
 
 # # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
 # gradle/wrapper/gradle-wrapper.properties
+/.idea/.gitignore
+/.idea/detekt.xml
+/.idea/gradle.xml
+/.idea/misc.xml
+/.idea/vcs.xml
